# umm-dependency-selector

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
cache/: Decompose-Detailed_Survey_and_Lessons_Learned_Quality_Model-Laszlo's_Viewpoint-cache.json  Decompose-Detailed_Survey_and_Lessons_Learned_Quality_Model-cache.json  Decompose-Survey_and_Lessons_Learned_Quality_Model-Developer_Viewpoint-cache.json  Kodein-Detailed_Survey_and_Lessons_Learned_Quality_Model-Laszlo's_Viewpoint-cache.json  Kodein-Detailed_Survey_and_Lessons_Learned_Quality_Model-cache.json  Kodein-Survey_and_Lessons_Learned_Quality_Model-Developer_Viewpoint-cache.json  Kodein-TestQualityModel-Developer_Viewpoint-cache.json  aioreactive-TestQualityModel-Developer_Viewpoint-cache.json  circuit-Detailed_Survey_and_Lessons_Learned_Quality_Model-Laszlo's_Viewpoint-cache.json  circuit-Detailed_Survey_and_Lessons_Learned_Quality_Model-cache.json  circuit-Survey_and_Lessons_Learned_Quality_Model-Developer_Viewpoint-cache.json  core-Detailed_Survey_and_Lessons_Learned_Quality_Model-cache.json  koin-Detailed_Survey_and_Lessons_Learned_Quality_Model-Laszlo's_Viewpoint-cache.json  koin-Detailed_Survey_and_Lessons_Learned_Quality_Model-cache.json  koin-Survey_and_Lessons_Learned_Quality_Model-Developer_Viewpoint-cache.json  koin-TestQualityModel-Developer_Viewpoint-cache.json  kotlin-inject-Detailed_Survey_and_Lessons_Learned_Quality_Model-Laszlo's_Viewpoint-cache.json  kotlin-inject-Detailed_Survey_and_Lessons_Learned_Quality_Model-cache.json  minitwit_FE-TestQualityModel-Developer_Viewpoint-cache.json  (+21 more)
(+611 files in other folders)
