[tool.poetry]
name = "umm-dependency-selector"
version = "0.1.0"
description = ""
authors = ["lfor <laszlo.forgacs798@gmail.com>"]
readme = "README.md"
packages = [{include = "umm_dependency_selector"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
