[tool.poetry]
name = "umm-dependency-selector"
version = "0.1.0"
description = ""
authors = ["lfor <laszlo.forgacs798@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ahpy = "^2.0"
aioconsole = "^0.7.0"
aiofiles = "^23.2.1"
validators = "^0.22.0"
scikit-criteria = "^0.8.7"
pygithub = "^2.2.0"
python-dotenv = "^1.0.1"
gitpython = "^3.1.42"
lizard = "^1.17.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
